setting up home page

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </section>
         <section>
             <div class="row">
-                <div class="medium-12 large-12 columns">
+                <div class="medium-12 large-10 large-centered columns">
                     <p>Spend <strong>HALF</strong> as much on R&D talent as you would in the Bay Area. Let us show you how!</p>
                     <img src="assets/img/map.png" alt="Caskadia map" width="780" height="420">
-                    <p>We are not simply a third party HR firm.</p>
+                    <p><strong>We are not simply a third party HR firm.</strong></p>
                     <p>We ARE a trusted business partner who can rapidly personalize our services to meet your needs. We CAN provide you with <strong>ALL</strong> the elements necessary for your Canadian R&D subsidiary.</p>
                 </div>
             </div>
@@ -69,62 +69,72 @@
                     <h1>Our Core Services</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="medium-6 large-6 columns column-text">
-                    <h2>Talent acquisition and onboarding</h2>
-                    <p>In house recruitment and talent sourcing for the best talent in the market.</p>
-                </div>
-                <div class="medium-6 large-6 columns column-image">
-                    <img src="assets/img/talent_aqusition.png" alt="Talent acquisition and onboarding">
-                </div>
-            </div>
-            <div class="row">
-                <div class="medium-6 large-6 columns column-text">
-                    <h2>HR Operations and employee benefits administration</h2>
-                    <p>Full employee lifecycle support and administration.</p>
-                </div>
-                <div class="medium-6 large-6 columns column-image">
-                    <img src="assets/img/hr_operations_benefits.png" alt="HR Operations and employee benefits administration">
+            <div class="service-row">
+                <div class="row">
+                    <div class="large-6 columns column-text">
+                        <h2>Talent acquisition and onboarding</h2>
+                        <p>In house recruitment and talent sourcing for the best talent in the market.</p>
+                    </div>
+                    <div class="large-6 columns column-image">
+                        <img src="assets/img/talent_aqusition.png" alt="Talent acquisition and onboarding">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="medium-6 large-6 columns column-text">
-                    <h2>Real estate and office site selection</h2>
-                    <p>Market knowledge for the best office locales at the lowest rates.</p>
-                </div>
-                <div class="medium-6 large-6 columns column-image">
-                    <img src="assets/img/real_estate_selection.png" alt="Real estate and office site selection">
-                </div>
-            </div>
-            <div class="row">
-                <div class="medium-6 large-6 columns column-text">
-                    <h2>Tax and Legal advice, incorporation and tax compliance</h2>
-                    <p>Access to world class expertise at favourable terms.</p>
-                </div>
-                <div class="medium-6 large-6 columns column-image">
-                    <img src="assets/img/tax_legal_advice.png" alt="Tax and Legal advice, incorporation and tax compliance">
+            <div class="service-row">
+                <div class="row">
+                    <div class="large-6 columns column-text">
+                        <h2>HR Operations and employee benefits administration</h2>
+                        <p>Full employee lifecycle support and administration.</p>
+                    </div>
+                    <div class="large-6 columns column-image">
+                        <img src="assets/img/hr_operations_benefits.png" alt="HR Operations and employee benefits administration">
+                    </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="medium-6 large-6 columns column-text">
-                    <h2>Ongoing operational management</h2>
-                    <p>Focus on your core business while we manage the office logistics.</p>
+            <div class="service-row">
+                <div class="row">
+                    <div class="large-6 columns column-text">
+                        <h2>Real estate and office site selection</h2>
+                        <p>Market knowledge for the best office locales at the lowest rates.</p>
+                    </div>
+                    <div class="large-6 columns column-image">
+                        <img src="assets/img/real_estate_selection.png" alt="Real estate and office site selection">
+                    </div>
                 </div>
-                <div class="medium-6 large-6 columns column-image">
-                    <img src="assets/img/operational_management.png" alt="Ongoing operational management">
+            </div>
+            <div class="service-row">
+                <div class="row">
+                    <div class="large-6 columns column-text">
+                        <h2>Tax and Legal advice, incorporation and tax compliance</h2>
+                        <p>Access to world class expertise at favourable terms.</p>
+                    </div>
+                    <div class="large-6 columns column-image">
+                        <img src="assets/img/tax_legal_advice.png" alt="Tax and Legal advice, incorporation and tax compliance">
+                    </div>
+                </div>
+            </div>
+            <div class="service-row">
+                <div class="row">
+                    <div class="large-6 columns column-text">
+                        <h2>Ongoing operational management</h2>
+                        <p>Focus on your core business while we manage the office logistics.</p>
+                    </div>
+                    <div class="large-6 columns column-image">
+                        <img src="assets/img/operational_management.png" alt="Ongoing operational management">
+                    </div>
                 </div>
             </div>
         </section>
         <section class="footer-callout">
             <div class="row">
-                <div class="medium-12 large-12 columns">
-                   <p>Canada, known for our high quality engineering talent, innovation friendly business climate, stable and predictable government, generous tax incentives and cultural alignment to the United States, <span class="orange">Canada is the ideal destination for your next R&D subsidiary!</span></p>
+                <div class="medium-12 large-10 large-centered columns">
+                   <p>Canada, known for our high quality engineering talent, innovation friendly business climate, stable and predictable government, generous tax incentives and cultural alignment to the United States, <strong><span class="text-red">Canada is the ideal destination for your next R&D subsidiary!</span></strong></p>
                    <a href="contact-us.html" class="btn btn-red">Contact us</a>
                 </div>
             </div>
         </section>
         <footer>
-            <div class="row">
+            <div class="row footer-utility">
                 <div class="large-12 columns">
                     <div class="branding">
                         <a href="/"><img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50"></a>
