--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="large-12 columns">
                     <div class="branding left">
-                        <img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50">
+                        <a href="index.html"><img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50"></a>
                     </div>
                     <nav class="nav main-nav right">
                         <ul>
@@ -76,8 +76,10 @@
                     </ul>
                 </div>
             </div>
+            <img src="assets/img/triangles_bottom.png" class="triangle-bottom">
         </section>
         <section class="services" id="services">
+            <img src="assets/img/triangles_top.png" class="triangle-top">
             <div class="row">
                 <div class="medium-12 large-12 columns">
                     <h1>Our Core Services</h1>
@@ -146,8 +148,10 @@
                    <a href="contact-us.html" class="btn btn-red">Contact us</a>
                 </div>
             </div>
+            <img src="assets/img/triangles_bottom.png" class="triangle-bottom">
         </section>
         <footer>
+            <img src="assets/img/triangles_top.png" class="triangle-top">
             <div class="row footer-utility">
                 <div class="large-12 columns">
                     <div class="branding">
