--- a/contact-us.html
+++ b/contact-us.html
@@ -14,11 +14,24 @@
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     </head>
     <body>
+    <button class="close-btn"><i class="fi-list"></i></button>
+    <div class="mobile-nav-container">
+        
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="/" class="current">Home</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="contentarea">
         <header>
             <div class="row">
                 <div class="large-12 columns">
                     <div class="branding left">
-                        <img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50">
+                        <a href="index.html"><img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50"></a>
                     </div>
                     <nav class="nav right">
                         <ul>
@@ -55,8 +68,10 @@
                     <p>Address:  Suite 125/5  - 887 Great Northern Way Vancouver BC V5T4T5</p>
                 </div>
             </div>
+            <img src="assets/img/triangles_bottom.png" class="triangle-bottom">
         </section>
         <footer>
+            <img src="assets/img/triangles_top.png" class="triangle-top">
             <div class="row footer-utility">
                 <div class="large-12 columns">
                     <div class="branding">
@@ -79,5 +94,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="assets/js/main.js"></script>
+    </div>
     </body>
 </html>
