--- a/jobs.html
+++ b/jobs.html
@@ -14,11 +14,24 @@
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     </head>
     <body>
+    <button class="close-btn"><i class="fi-list"></i></button>
+    <div class="mobile-nav-container">
+        
+        <nav class="mobile-nav">
+            <ul>
+                <li><a href="/" class="current">Home</a></li>
+                <li><a href="team.html">Team</a></li>
+                <li><a href="jobs.html">Jobs</a></li>
+                <li><a href="contact-us.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </div>
+    <div id="contentarea">
         <header>
             <div class="row">
                 <div class="large-12 columns">
                     <div class="branding left">
-                        <img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50">
+                        <a href="index.html"><img src="assets/img/caskadia_logo.png" class="logo" alt="Caskadia" width="248" height="50"></a>
                     </div>
                     <nav class="nav right">
                         <ul>
@@ -43,11 +56,14 @@
                 <div class="medium-12 large-10 large-centered columns">
                     <p>Proin quam risus, feugiat non ultricies id, tempus ut neque. Mauris leo leo, imperdiet nec ullamcorper ut, tur ex sed sapien  tur ex sed sapien eleifend eget tortor. Nulla sem ex, tristique a tempor placerat, posuere et augue. In efficitur ex sed sapien malesuada volutpat.</p>
                     <p>Integer et ligula sagittis, faucibus nunce et augue. I nec, tempus mi. Pellentesque id sem ut erat rhoncus sodales ut vitae imperdiet nec ullamcorper ut, tur ex sed sapien sem.</p>
-                    <a href="#" class="btn btn-red">View all openings</a>
+                    <!-- <a href="#openings" class="btn btn-red">View all openings</a> -->
                 </div>
             </div>
         </section>
-        <section class="job-listing">
+        <section class="seperator-2">
+           
+        </section>
+        <section class="job-listing" id="openings">
             <div class="row">
                 <div class="medium-12 columns">
                     <div class="job-listing-type">
@@ -60,7 +76,7 @@
                                         <p>Vancouver, BC</p>
                                     </div>
                                     <div class="job-listing-link medium-12 large-4 columns">
-                                        <a href="#" class="btn btn-red">Download PDF</a>
+                                        <a href="assets/pdf/caskadia-labs-director-of-engineering-sept-2015.pdf" target="_blank" class="btn btn-red">Download PDF</a>
                                     </div>                                    
                                 </div>
                             </div>
@@ -68,8 +84,11 @@
                     </div>
                 </div>
             </div>
+            <img src="assets/img/triangles_bottom.png" class="triangle-bottom">
         </section>
+
         <footer>
+            <img src="assets/img/triangles_top.png" class="triangle-top">
             <div class="row footer-utility">
                 <div class="large-12 columns">
                     <div class="branding">
@@ -92,5 +111,6 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="assets/js/main.js"></script>
+    </div>
     </body>
 </html>
