--- a/jobs.html
+++ b/jobs.html
@@ -7,11 +7,21 @@
         <![endif]-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Caskadia Labs</title>
+        <meta name="description" content="Caskadia Labs is a one-stop services provider for fast growing technology companies to set up Research & Development offices in Canada.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="">
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+        <script>
+          // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          // ga('create', 'UA-67863715-1', 'auto');
+          // ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
     <button class="close-btn"><i class="fi-list"></i></button>
@@ -54,8 +64,8 @@
         <section>
             <div class="row">
                 <div class="medium-12 large-10 large-centered columns">
-                    <p>Proin quam risus, feugiat non ultricies id, tempus ut neque. Mauris leo leo, imperdiet nec ullamcorper ut, tur ex sed sapien  tur ex sed sapien eleifend eget tortor. Nulla sem ex, tristique a tempor placerat, posuere et augue. In efficitur ex sed sapien malesuada volutpat.</p>
-                    <p>Integer et ligula sagittis, faucibus nunce et augue. I nec, tempus mi. Pellentesque id sem ut erat rhoncus sodales ut vitae imperdiet nec ullamcorper ut, tur ex sed sapien sem.</p>
+                    <p>Technology innovators and fast growing companies are looking for top talent in Vancouver to develop their business and accelerate growth. We bring a wealth of knowledge and success in placing candidates from entry to VP- level positions.</p>
+                    <p>At Caskadia, we cultivate new relationships with talented candidates and exceptional employers daily. We are committed to introducing unique, skilled jobseekers to great employers.</p>
                     <!-- <a href="#openings" class="btn btn-red">View all openings</a> -->
                 </div>
             </div>
