--- a/team.html
+++ b/team.html
@@ -7,11 +7,21 @@
         <![endif]-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Caskadia Labs</title>
+        <meta name="description" content="Caskadia Labs is a one-stop services provider for fast growing technology companies to set up Research & Development offices in Canada.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="">
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+        <script>
+          // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          // ga('create', 'UA-67863715-1', 'auto');
+          // ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
     <button class="close-btn"><i class="fi-list"></i></button>
@@ -60,42 +70,44 @@
             </div>
         </section>
         <section class="team-listing">
-            <div class="team-listing-row">
-                <div class="row">
-                    <div class="medium-10 large-10 large-centered columns">
-                        <div class="team-listing-headshot">
-                            <img src="assets/img/peter_luong.jpg">
-                        </div>
-                        <div class="team-listing-meta">
-                            <div class="meta-tbl">
-                                <div class="meta-cell">
-                                    <div class="name">PETER LUONG</div>
-                                    <div class="title">Co-Founder</div>
-                                    <div class="email"><a href="mailto:peter@caskadia.com">peter@caskadia.com</a></div>
-                                    <a href="https://ca.linkedin.com/in/luongpeter" class="team-socil-icon" target="_blank"><img src="assets/img/linkedin_icon.png" width="50" height="50" alt="PETER LUONG Linkedin"></a>
-                                </div>
+            <div class="team-listing-rows-contaner">
+                <div class="team-listing-row">
+                    <div class="row">
+                        <div class="medium-10 large-10 large-centered columns">
+                            <div class="team-listing-headshot">
+                                <img src="assets/img/peter_luong.jpg">
                             </div>
-                        </div>   
-                    </div>                                 
+                            <div class="team-listing-meta">
+                                <div class="meta-tbl">
+                                    <div class="meta-cell">
+                                        <div class="name">PETER LUONG</div>
+                                        <div class="title">Co-Founder</div>
+                                        <div class="email"><a href="mailto:peter@caskadia.com">peter@caskadia.com</a></div>
+                                        <a href="https://ca.linkedin.com/in/luongpeter" class="team-socil-icon" target="_blank"><img src="assets/img/linkedin_icon.png" width="50" height="50" alt="PETER LUONG Linkedin"></a>
+                                    </div>
+                                </div>
+                            </div>   
+                        </div>                                 
+                    </div>
                 </div>
-            </div>
-            <div class="team-listing-row">
-                <div class="row">
-                    <div class="medium-10 large-10 large-centered columns">
-                        <div class="team-listing-headshot">
-                            <img src="assets/img/ryan_pernia.jpg">
-                        </div>
-                        <div class="team-listing-meta">
-                            <div class="meta-tbl">
-                                <div class="meta-cell">
-                                    <div class="name">RYAN PERNIA</div>
-                                    <div class="title">Co-Founder</div>
-                                    <div class="email"><a href="mailto:ryan@caskadia.com">ryan@caskadia.com</a></div>
-                                    <a href="https://ca.linkedin.com/in/ryanpernia" class="team-socil-icon" target="_blank"><img src="assets/img/linkedin_icon.png" width="50" height="50" alt="PETER LUONG Linkedin"></a>
-                                </div>
+                <div class="team-listing-row">
+                    <div class="row">
+                        <div class="medium-10 large-10 large-centered columns">
+                            <div class="team-listing-headshot">
+                                <img src="assets/img/ryan_pernia.jpg">
                             </div>
-                        </div>   
-                    </div>                                 
+                            <div class="team-listing-meta">
+                                <div class="meta-tbl">
+                                    <div class="meta-cell">
+                                        <div class="name">RYAN PERNIA</div>
+                                        <div class="title">Co-Founder</div>
+                                        <div class="email"><a href="mailto:ryan@caskadia.com">ryan@caskadia.com</a></div>
+                                        <a href="https://ca.linkedin.com/in/ryanpernia" class="team-socil-icon" target="_blank"><img src="assets/img/linkedin_icon.png" width="50" height="50" alt="PETER LUONG Linkedin"></a>
+                                    </div>
+                                </div>
+                            </div>   
+                        </div>                                 
+                    </div>
                 </div>
             </div>
             <img src="assets/img/triangles_bottom.png" class="triangle-bottom">
