--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
         <![endif]-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Caskadia Labs</title>
+        <meta name="description" content="Caskadia Labs is a one-stop services provider for fast growing technology companies to set up Research & Development offices in Canada.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="image/png" href="">
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+        <script>
+          // (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          // (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          // m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          // })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+          // ga('create', 'UA-67863715-1', 'auto');
+          // ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
     <button class="close-btn"><i class="fi-list"></i></button>
