--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="medium-12 large-10 large-centered columns">
                     <h1>Caskadia Labs</h1>
-                    <h2>Your Trusted Canadian Talent Solution.Now.</h2>
+                    <h2>Your Trusted Canadian Talent Solution. Now.</h2>
                     <p>Caskadia Labs is a one-stop services provider for fast growing technology companies to set up Research & Development offices in Canada.  We integrate and deliver all the elements needed for your Canadian R&D office. We focus heavily on targeting, sourcing and onboarding of high-quality engineering talent.</p>
                     <a href="#services" class="btn btn-white hero-cta">Learn more</a>
                 </div>
@@ -91,7 +91,8 @@
             <img src="assets/img/triangles_top.png" class="triangle-top">
             <div class="row">
                 <div class="medium-12 large-12 columns">
-                    <h1>Our Core Services</h1>
+                    <h1>VANCOUVER OFFICE IN A BOX</h1>
+                    <img src="assets/img/box.png" alt="">
                 </div>
             </div>
             <div class="service-row">
