--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="medium-12 large-10 large-centered columns">
                     <p><strong>Want to save as much as 50% of your R&D salary costs?</strong></p>
-                    <p>Contact us to learn about how we can help your company get R&D done in Canada. Get your Canadian R&D office set up now.</p>
+                    <p>Contact us to learn about how we can help your company get R&D done in Canada.<br>Get your Canadian R&D office set up now.</p>
                 </div>
             </div>
         </section>
