--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="row">
                 <div class="medium-12 large-12 columns">
                     <h1>VANCOUVER OFFICE IN A BOX</h1>
-                    <img src="assets/img/box.png" alt="">
+                    <img src="assets/img/box.png" alt="" class="mb-40">
                 </div>
             </div>
             <div class="service-row">
