--- a/jobs.html
+++ b/jobs.html
@@ -130,6 +130,32 @@
                                 </div>
                             </div>
                         </div> <!-- /job-listing-row" -->
+                        <div class="row job-listing-row">
+                            <div class="job-listing-single small-10 small-centered columns">
+                                <div class="row">
+                                    <div class="job-listing-meta medium-12 large-8 columns">
+                                        <h3>SENIOR FRONT END ENGINEER</h3>
+                                        <p>Vancouver, BC</p>
+                                    </div>
+                                    <div class="job-listing-link medium-12 large-4 columns">
+                                        <a href="assets/pdf/caskadia-labs-lead-front-end-engineer-sept-2015.pdf" target="_blank" class="btn btn-red">Download PDF</a>
+                                    </div>                                    
+                                </div>
+                            </div>
+                        </div> <!-- /job-listing-row" -->
+                        <div class="row job-listing-row">
+                            <div class="job-listing-single small-10 small-centered columns">
+                                <div class="row">
+                                    <div class="job-listing-meta medium-12 large-8 columns">
+                                        <h3>SENIOR BACK END ENGINEER</h3>
+                                        <p>Vancouver, BC</p>
+                                    </div>
+                                    <div class="job-listing-link medium-12 large-4 columns">
+                                        <a href="assets/pdf/caskadia-labs-lead-back-end-engineer-sept-2015.pdf" target="_blank" class="btn btn-red">Download PDF</a>
+                                    </div>                                    
+                                </div>
+                            </div>
+                        </div> <!-- /job-listing-row" -->
                     </div>
                 </div>
             </div>
